# python-project-3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
page_loader/: __init__.py  cli.py  html.py  loader.py  logging.py  storage.py  url.py
page_loader/scripts/: main.py
tests/: test_exceptions.py  test_html.py  test_loader.py  test_url.py  utils.py
tests/fixtures/: local_page.html  remote_page.html  script.js  style.css
