[tool.poetry]
name = "hexlet-code"
version = "0.7.0"
description = ""
authors = ["sgmdlt <justgodshot@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
progress = "^1.6"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipython = "^7.28.0"
wemake-python-styleguide = "^0.15.3"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = 'page_loader.scripts.main:main'
